--- a/Site/index.html
+++ b/Site/index.html
@@ -4,5 +4,6 @@
         </head>
 <body>
     <h1>Hello Coursera!It's a great course! </h1>
+    <h2>GitHub would be Awesome to host your own website!!!!</h2>
 </body>
 </html>
